<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/photo_navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/show_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/photo_navigation_slideshow"
        android:icon="@drawable/ic_slideshow"
        android:title="@string/slideshow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/photo_navigation_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/photo_navigation_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_photo"
        app:showAsAction="ifRoom" />
</menu>